# Codesh-Compiler

./: .gitignore  CMakeLists.txt  README.md  WINDOWS-BUILDING.md  WINDOWS-RUNNING.md  WINDOWS.md  amen_template.txt  build-jar.sh  build.ps1  build.sh  rashi.amen  vcpkg.json  ראשי.אמן
.run/: Build Release.run.xml  Compile and Run.run.xml  Install Global.run.xml  Package Portable.run.xml  codeshc Help.run.xml  codeshc LSP mode Windows.run.xml  codeshc LSP mode.run.xml  codeshc Server Test Windows.run.xml  codeshc Server Test.run.xml  codeshc Talmud Codesh Windows.run.xml  codeshc Talmud Codesh.run.xml
Examples/: שלום־עולם.אמן
Examples/יחסית־מגניב/: ניקוד.אמן
Examples/מאוד־מגניב/: חוק־מאה־ועשר.אמן  חוק־עשר־ומאה.אמן  לקוח־הצטטפ.אמן  פיבונאצי.אמן  קלט.אמן
Examples/מאוד־עלוב־ביחס־למה־שיש־במאוד־מגניב/אחר/: ויעש.אמן  זריקת־חטאים.אמן  זריקת־חטאים־פוריל.אמן  מתודה.אמן  מתודות.אמן
Examples/מאוד־עלוב־ביחס־למה־שיש־במאוד־מגניב/בלוקי־לוגיקה/: אם־ואחרת.אמן  בעוד.אמן  וימנה.אמן
Examples/מאוד־עלוב־ביחס־למה־שיש־במאוד־מגניב/בסיס/: ישו.אמן
Examples/מאוד־עלוב־ביחס־למה־שיש־במאוד־מגניב/מונחה־עצמים/: הורשה.אמן  ויברא־מאתחלים.אמן  קאסטינג־אוטמטי.אמן
Examples/מאוד־עלוב־ביחס־למה־שיש־במאוד־מגניב/מסדרים/: משתנים.אמן
Examples/מאוד־עלוב־ביחס־למה־שיש־במאוד־מגניב/משתנים/: סוגי־משתנים.אמן
install-scripts/: build.ps1  build.sh  install-global.ps1  install-global.sh  package-portable.ps1  package-portable.sh  uninstall-global.ps1  uninstall-global.sh  uninstall.ps1
install-scripts/packaging/: package-portable.ps1  package-portable.sh
src/: command_parser.cpp  command_parser.h  main.c  main.cpp  test.cpp  test.h  util.cpp  util.h
src/blasphemies/: blasphemy_collector.cpp  blasphemy_collector.h  blasphemy_details.cpp  blasphemy_details.h
src/blasphemy/: blasphemy_collector.cpp  blasphemy_collector.h  blasphemy_consumer.cpp  blasphemy_consumer.h  details.cpp  details.h
src/classpath/loader/: class_directory_loader.cpp  class_directory_loader.h  class_file_container_loader.cpp  class_file_container_loader.h  class_file_loader.cpp  class_file_loader.h  class_loader.cpp  class_loader.h  interop_replacements.cpp  interop_replacements.h  jar_loader.cpp  jar_loader.h  jimage_loader.cpp  jimage_loader.h  util.cpp  util.h
src/defenition/: basad_type.h  definitions.h  fully_qualified_class_name.cpp  fully_qualified_class_name.h  fully_qualified_name.cpp  fully_qualified_name.h  i_pretty_string_convertable.h  primitive_type.h  visibility.cpp  visibility.h
src/lexer/: group_name.h  nikkud_util.cpp  nikkud_util.h  regex.cpp  regex.h  regex_helper.c  regex_helper.h  source_file_info.cpp  source_file_info.h  source_keyword_info.cpp  source_keyword_info.h  tokenizer.cpp  tokenizer.h
src/lexer/trie/: keyword.cpp  keyword.h  keyword_info.h  keywords.cpp  keywords.h  trie.cpp  trie.h  trie_node.cpp  trie_node.h  word_boundary.h
src/lsp/: lsp_receiever.cpp  lsp_receiver.h
src/output/: local_variable_table.cpp  local_variable_table.h
src/output/ir/: code_block.cpp  code_block.h  condition_block_builder.cpp  condition_block_builder.h  instruction.cpp  instruction.h  ir_instruction.cpp  ir_instruction.h  util.cpp  util.h
src/output/jvm_target/: attribute_info.h  build.cpp  build.h  class_file.h  class_file_builder.cpp  class_file_builder.h  class_file_writer.cpp  class_file_writer.h  constant_pool.cpp  constant_pool.h  constant_pool_builder.cpp  constant_pool_builder.h  cp_info.h  jar_bundler.cpp  jar_bundler.h  methods_info.h  stack_map_table_builder.cpp  stack_map_table_builder.h
src/parser/: class_parser.cpp  class_parser.h  command_parser.cpp  command_parser.h  compilation_unit_parser.cpp  compilation_unit_parser.h  import_parser.cpp  import_parser.h  parser.cpp  parser.h  util.cpp  util.h  value_parser.cpp  value_parser.h
src/parser/ast/: ast_root.cpp  ast_root.h  block_ast_node.cpp  block_ast_node.h  compilation_unit_ast_node.cpp  compilation_unit_ast_node.h  import_declaration.h  import_declaration_ast_node.cpp  import_declaration_ast_node.h  local_variable_declaration_ast_node.cpp  local_variable_declaration_ast_node.h  method_declaration_ast_node.cpp  method_declaration_ast_node.h  node_type.h  root_ast_node.cpp  root_ast_node.h  type_declaration_ast_node.cpp  type_declaration_ast_node.h  variable_declaration_ast_node.cpp  variable_declaration_ast_node.h  while_ast_node.cpp  while_ast_node.h
src/parser/type/: class_parser.cpp  class_parser.h  type_parser.cpp  type_parser.h
src/parser/value/: arithmetic_value_parser.cpp  arithmetic_value_parser.h  assignment_value_parser.cpp  assignment_value_parser.h  biblical_numbers_parser.cpp  biblical_numbers_parser.h  boolean_value_parser.cpp  (+7 more)
src/semantic_analyzer/: aliases.cpp  aliases.h  analyzer.cpp  analyzer.h  builtins.cpp  builtins.h  country_verifier.cpp  country_verifier.h  external_class_loader.cpp  external_class_loader.h  semantic_context.cpp  semantic_context.h  util.cpp  util.h
src/token/: token.cpp  token.h  token_group.cpp  token_group.h  token_type.cpp  token_type.h
test/: אדם.אמן  איא.אמן  אם.אמן  אם־ואחרת.אמן  ארץ־מוצא.אמן  בדיקת־מפיזה.אמן  בעוד.אמן  בראשית.אמן  בראשית־וכו.אמן  בראשית־חטא.אמן  גישת־שדות.אמן  דבר־מה.אמן  הגיה.אמן  הורשה.אמן  הזהר.אמן  השמה.אמן  ויבא.אמן  ויברא־מאתחלים.אמן  וימנה.אמן  ויעש.אמן  חישוב.אמן  כתובים.אמן  לולאה.אמן  מולטי־רווח.אמן  מעשה־עצם.אמן  משתנים.אמן  מתודה.אמן  מתודות.אמן  עצם.אמן  עצם־ויבוא.אמן  עצם־ניסיון.אמן  פיבונאצי.אמן  פעולות־השמה.אמן  פעמיים.אמן  קאסטינג־אוטמטי.אמן  ראשי.אמן  שגיאות.אמן  שלום־עולם.אמן
test/http/: לקוח־הצטטפ.אמן
test/אחר/: בראשית־וכו.אמן  גישה־למערך.אמן  גישת־שדות.אמן  ויעש.אמן  זריקת־חטאים.אמן  זריקת־חטאים־פוריל.אמן  חטאים.אמן  חיצוני.אמן  מתודה.אמן  מתודות.אמן  פעמיים.אמן
test/בלוקי־לוגיקה/: אם.אמן  אם־ואחרת.אמן  בעוד.אמן  וימנה.אמן
test/בסיס/: ויבא.אמן  ישו.אמן
test/מונחה־עצמים/: בצלם.אמן  הורשה.אמן  ויברא־מאתחלים.אמן  מעשה־עצם.אמן  קאסטינג־אוטמטי.אמן
test/משתנים/: משתנים.אמן  משתנים־מקוננים.אמן  סוגי־משתנים.אמן  ספירה־מקראית.אמן
test/פרויקט/: נסיון.אמן  פיבונאצי.אמן  ראשי.אמן  תוכנית.אמן
test/תועבות־והזהרים/: בראשית־חטא.אמן  הזהר.אמן
(+351 files in other folders)
